# panopticon

./: .gitignore  CLAUDE.md  README.md  prek.toml  sdkconfig.defaults
.github/workflows/: panopticon.yml  sentinel.yml
docs/: home-assistant.md  sentinel-protocol.md
panopticon/: .env.example  Caddyfile  Cargo.toml  README.md  build.rs  deploy  panopticon.service
panopticon/migrations/: 001_create_auth_tables.sql  002_create_access_control_tables.sql  003_add_notify_email.sql  004_create_push_subscriptions.sql  005_create_sentinels.sql  006_hash_sentinel_secrets.sql  007_create_lock_state_log.sql  007_create_nfc_tokens.sql
panopticon/src/: api.rs  auth_store.rs  db.rs  email.rs  email_auth.rs  geo_access.rs  ip_whitelist.rs  lock_log.rs  main.rs  middleware.rs  mqtt.rs  nfc_auth.rs  oauth.rs  push.rs  sentinel.rs  session.rs  tcp.rs  utec.rs  webhook.rs  ws.rs
panopticon/web/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
panopticon/web/src/: app.css  app.html
panopticon/web/src/routes/: +layout.svelte  +page.svelte
panopticon/web/src/routes/forgot-password/: +page.svelte
panopticon/web/src/routes/login/: +page.svelte
panopticon/web/src/routes/register/: +page.svelte
panopticon/web/src/routes/reset-password/: +page.svelte
panopticon/web/src/routes/sentinel/[id]/: +page.svelte
panopticon/web/static/: sw.js
sentinel/: .env.example  Cargo.toml  build.rs  sdkconfig.defaults
sentinel/.cargo/: config.toml
sentinel/src/: buzzer.rs  display.rs  leds.rs  logger.rs  main.rs  rfiduino.rs
