[package]
name = "panopticon"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros", "ws"] }
axum-extra = { version = "0.12", features = ["typed-header", "cookie"] }
include_dir = "0.7"
mime_guess = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
urlencoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
argon2 = "0.5"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
rand = "0.8"
ipnet = "2"
web-push = { version = "0.11", default-features = false }
