[package]
name = "rfid-door"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
esp-idf-svc = { version = "0.51", features = ["std"] }
embedded-svc = "0.28"
anyhow = "1"
log = "0.4"

[build-dependencies]
embuild = "0.33"
dotenvy = "0.15"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"
